k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-authentication
  labels:
    app: go-authentication
  annotations:
    traefik.ingress.kubernetes.io/service-weights: "100"
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/load-balancer-method: "drr"
spec:
  selector:
    app: go-authentication
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  type: ClusterIP
